--- a/src/content/portfolio.pug
+++ b/src/content/portfolio.pug
@@ -16,6 +16,45 @@ h2 Portfolio
 .content.portfolio
   .row
     .column
+      img(src='./assets/images/portfolio/cottagecore.jpg' style=' width: 100%; height: auto;' alt='Photo of a Sakura Blossom White Gold Ring in a Japanese Zen garden.')
+      h3 Cottagecore Themed Charms Collection
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td 3D Design, Renders, Prints and Final Jewellery Products
+        tr
+          td Client / Project: 
+          td
+            a(target="_blank" href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+          td Behind the scenes: 
+          td
+            a(target="_blank" href='https://www.artstation.com/artwork/m8wo3y') See it on Artstation
+        tr
+          td See it in action:
+          td
+            a(target="_blank" href='https://grayjewellery.com.au/collections/cottagecore') View the Cottagecore collection
+
+    .column
+      img(src='./assets/images/portfolio/to-another-world.jpg' style=' width: 100%; height: auto;'  alt='Winter watercolour painting featuring Yule solid gold ring.')
+      h3 'To Another World' Campaign Video
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td 3D scene setup, animation, renders and video editing for a re-branding campaign.
+        tr
+          td Client / Project: 
+          td Internal
+        tr
+          td Behind the scenes: 
+          td
+            a(target="_blank" href='https://www.artstation.com/artwork/Za9nOm') See it on Artstation
+        tr
+          td See it in action:
+          td
+            a(target="_blank" href='https://www.youtube.com/watch?v=gYr3hbP24sQ') Watch the video on Youtube
+  .row
+    .column
       img(src='./assets/images/portfolio/open-studios-cherry-blossom-ring-in-zen-garden.jpg' style=' width: 100%; height: auto;' alt='Photo of a Sakura Blossom White Gold Ring in a Japanese Zen garden.')
       h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
       table(class='portfolio_item')
@@ -25,15 +64,15 @@ h2 Portfolio
         tr
           td Client / Project: 
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(target="_blank" href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/blossoms') View the Blossoms collection
+            a(target="_blank" href='https://grayjewellery.com.au/collections/blossoms') View the Blossoms collection
 
     .column
       img(src='./assets/images/portfolio/open-studios-1-winter-banner-ring.jpg' style=' width: 100%; height: auto;'  alt='Winter watercolour painting featuring Yule solid gold ring.')
@@ -45,15 +84,15 @@ h2 Portfolio
         tr
           td Client / Project: 
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(target="_blank" href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') View the Yule collection
+            a(target="_blank" href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') View the Yule collection
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-gemini-banner.jpg' style=' width: 100%; height: auto;'  alt='Picture of the stars and a Gemini solid gold pendant.')
@@ -65,15 +104,15 @@ h2 Portfolio
         tr
           td Client / Project:
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(target="_blank" href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/Dvzw8R') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/Dvzw8R') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Gemini&sort_by=title-ascending') View the Gemini collection
+            a(target="_blank" href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Gemini&sort_by=title-ascending') View the Gemini collection
     .column
       img(src='./assets/images/portfolio/open-studios-dsc-2682-large.jpg' style=' width: 100%; height: auto;' alt='Close up photo of a finished Madeira Citrine gold pendant.')
       h3 Madeira Citrine 14K Gold pendant fine jewellery commission
@@ -84,11 +123,11 @@ h2 Portfolio
         tr
           td Client / Project: 
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(target="_blank" href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/n0BVeE') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/n0BVeE') See it on Artstation
         tr
           td See it in action:
           td N/A, private collection.
@@ -103,15 +142,15 @@ h2 Portfolio
         tr
           td Client / Project: 
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(target="_blank" href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/RyeavD') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/RyeavD') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://www.instagram.com/garrettrayjewellery/') Visit the client's Instagram
+            a(target="_blank" href='https://www.instagram.com/garrettrayjewellery/') Visit the client's Instagram
 
     .column
       img(src='./assets/images/portfolio/open-studios-foxtail.jpg' style=' width: 100%; height: auto;' alt='Photo of Foxtail silver chain')
@@ -123,15 +162,15 @@ h2 Portfolio
         tr
           td Client / Project: 
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(target="_blank" href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/obdXBw') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/obdXBw') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/products/fine-silver-handmade-999-foxtail-double-loop-in-loop-chain-choker-to-necklace-length-various-lengths-available') Visit the product page
+            a(target="_blank" href='https://grayjewellery.com.au/products/fine-silver-handmade-999-foxtail-double-loop-in-loop-chain-choker-to-necklace-length-various-lengths-available') Visit the product page
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-morganite.jpg' style=' width: 100%; height: auto;' alt='Close up of Morganite earrings')
@@ -143,15 +182,15 @@ h2 Portfolio
         tr
           td Client / Project: 
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(target="_blank" href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/6NXxOV') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/6NXxOV') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/products/18k-gold-morganite-earrings') Visit the product page
+            a(target="_blank" href='https://grayjewellery.com.au/products/18k-gold-morganite-earrings') Visit the product page
 
     .column
       img(src='./assets/images/portfolio/open-studios-character-design.jpg' style=' width: 100%; height: auto;' alt='Composition of 3D character in a 2D background for the Kamigen comic')
@@ -163,15 +202,15 @@ h2 Portfolio
         tr
           td Client / Project: 
           td
-            a(href='https://kamigen.com/') Kamigen
+            a(target="_blank" href='https://kamigen.com/') Kamigen
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/m8lze8') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/m8lze8') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://www.instagram.com/p/Cr-84t1JqnA/?img_index=1') Kamigen Comics on Instagram
+            a(target="_blank" href='https://www.instagram.com/p/Cr-84t1JqnA/?img_index=1') Kamigen Comics on Instagram
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-aquamarine.jpg' style=' width: 100%; height: auto;' alt='Close up of Aquamarine pendant necklace')
@@ -183,15 +222,15 @@ h2 Portfolio
         tr
           td Client / Project: 
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(target="_blank" href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/XgxL1R') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/XgxL1R') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/products/18-karat-gold-and-aquamarine-necklace') Visit the product page
+            a(target="_blank" href='https://grayjewellery.com.au/products/18-karat-gold-and-aquamarine-necklace') Visit the product page
 
     .column
       img(src='./assets/images/portfolio/open-studios-kamigen.jpg' style=' width: 100%; height: auto;' alt='Screenshot of the animated intro sequence from Kamigen')
@@ -203,15 +242,15 @@ h2 Portfolio
         tr
           td Client / Project: 
           td
-            a(href='https://kamigen/') Kamigen
+            a(target="_blank" href='https://kamigen/') Kamigen
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/8bOl8x') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/8bOl8x') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://www.youtube.com/watch?v=VUzLwHIt_vM') Watch the animation test
+            a(target="_blank" href='https://www.youtube.com/watch?v=VUzLwHIt_vM') Watch the animation test
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-fanta-garnet.jpg' style=' width: 100%; height: auto;' alt='Close up phto of the Fanta Garnet necklace pendant')
@@ -223,15 +262,15 @@ h2 Portfolio
         tr
           td Client / Project: 
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(target="_blank" href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/blbaQg') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/blbaQg') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://grayjewellery.com.au/products/18k-gold-and-fanta-garnet-necklace') Visit the product page
+            a(target="_blank" href='https://grayjewellery.com.au/products/18k-gold-and-fanta-garnet-necklace') Visit the product page
 
     .column
       img(src='./assets/images/portfolio/open-studios-emerald.jpg' style=' width: 100%; height: auto;' alt='Close up of the Emerald and Diamond gold engagement ring')
@@ -243,11 +282,11 @@ h2 Portfolio
         tr
           td Client / Project: 
           td
-            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+            a(target="_blank" href='https://grayjewellery.com.au/') Garrett Ray Jewellery
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/49kVLn') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/49kVLn') See it on Artstation
         tr
           td See it in action:
           td N/A, private collection.
@@ -262,15 +301,15 @@ h2 Portfolio
         tr
           td Client / Project: 
           td
-            a(href='https://paulbrzeski.com/') Paul Brzeski
+            a(target="_blank" href='https://paulbrzeski.com/') Paul Brzeski
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/WBY0By') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/WBY0By') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://paulbrzeski.com/') Visit the client's website
+            a(target="_blank" href='https://paulbrzeski.com/') Visit the client's website
 
     .column
       img(src='./assets/images/portfolio/open-studios-kamigengame.jpg' style=' width: 100%; height: auto;' alt='Concept art of the Kamigen Aircraft combat game featuring UI elements')
@@ -282,15 +321,15 @@ h2 Portfolio
         tr
           td Client / Project: 
           td
-            a(href='https://kamigen.com') Kamigen
+            a(target="_blank" href='https://kamigen.com') Kamigen
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/5vPBxP') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/5vPBxP') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://kamigen.com/game.html') Drop into the pilots seat
+            a(target="_blank" href='https://kamigen.com/game.html') Drop into the pilots seat
   .row
     .column
       img(src='./assets/images/portfolio/open-studios-pelican.jpg' style=' width: 100%; height: auto;' alt='Composition of a 3D vehicle on the 2D background of the Kamigen comics')
@@ -302,15 +341,15 @@ h2 Portfolio
         tr
           td Client / Project: 
           td
-            a(href='https://kamigen.com/') Kamigen
+            a(target="_blank" href='https://kamigen.com/') Kamigen
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/YBqKWq') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/YBqKWq') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://www.instagram.com/p/Cr-84t1JqnA/?img_index=1') Kamigen Comics on Instagram
+            a(target="_blank" href='https://www.instagram.com/p/Cr-84t1JqnA/?img_index=1') Kamigen Comics on Instagram
     .column
       img(src='./assets/images/portfolio/open-studios-langenium.jpg' style=' width: 100%; height: auto;' alt='Cropped image of the main Langenium lore poster')
       h3 Langenium MMORPG and Multimedia Franchise Artwork and Production
@@ -321,12 +360,12 @@ h2 Portfolio
         tr
           td Client / Project: 
           td
-            a(href='https://langenium.com/') Langenium
+            a(target="_blank" href='https://langenium.com/') Langenium
         tr
           td Behind the scenes: 
           td
-            a(href='https://www.artstation.com/artwork/1xWV2K') See it on Artstation
+            a(target="_blank" href='https://www.artstation.com/artwork/1xWV2K') See it on Artstation
         tr
           td See it in action:
           td
-            a(href='https://www.youtube.com/watch?v=cJcr09qIVrI') Watch the original trailer
+            a(target="_blank" href='https://www.youtube.com/watch?v=cJcr09qIVrI') Watch the original trailer
