--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -2,6 +2,19 @@ h2 Blog
 .content
   .row
     .column
+      a(href='/blog/2023/08/studio-roundup-august-2023.html' target='_blank' title='Studio Roundup for August 2023')
+        img(src='/assets/blog/2023/08/1_KiFpOsEZO4yE7mzAeucs0w.webp' style=' width: 100%; height: auto;' alt='The Virgo Pendant features the Maiden’s hand holding a sheaf of wheat, with the Virgo constellation on the reverse side.')
+    .column
+      h3 Studio Roundup for August 2023
+      p.
+        Optimising 3D for the web. Virgo and Viva Magenta! What is "good code" anyway?
+      p
+        | Read our 
+        a(href='/blog/2023/08/studio-roundup-august-2023.html') August 2023 retro
+        | .
+
+  .row
+    .column
       a(href='/blog/2023/07/studio-roundup-july-2023.html' target='_blank' title='Studio Roundup for July 2023')
         img(src='/assets/blog/2023/07/1_vnEMqG7iAtvJXFlS-pMkIg.webp' style=' width: 100%; height: auto;' alt='Leo the proud lion, sculpted in precious metals with his majestically windswept mane.')
     .column
